@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-09-30T01:11:13Z",
-  "count_outdated" : 242,
-  "uniques_outdated" : 176,
+  "timestamp" : "2024-10-01T01:15:23Z",
+  "count_outdated" : 243,
+  "uniques_outdated" : 177,
   "count" : 244,
   "uniques" : 178,
   "clones" : [
-    {
-      "timestamp": "2024-09-17T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-09-18T00:00:00Z",
       "count": 1,
